# driveway-alarm

processor/: Cargo.toml
processor/src/: main.rs
receiver/: README.md  mix.exs
receiver/config/: config.exs  host.exs  target.exs
receiver/lib/: driveway_alarm_receiver.ex
receiver/lib/driveway_alarm_receiver/: application.ex  lora.ex  mqtt.ex
receiver/test/: driveway_alarm_receiver_test.exs
sensor/: code.py
