[package]
name = "driveway_alarm_processor"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
paho-mqtt = { git = "https://github.com/eclipse/paho.mqtt.rust.git", branch = "master" }
influxdb = { version = "0.4.0", features = ["derive"] }
chrono = "0.4"
tokio = { version = "0.2", features = ["full"] }
