[package]
name = "driveway_alarm_processor"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
influxdb = { version = "0.4.0", features = ["derive"] }
paho-mqtt = { git = "https://github.com/eclipse/paho.mqtt.rust.git", branch = "master" }
serde_json = "1.0"
tokio = { version = "0.2", features = ["full"] }
